# erc8004-risk-underwriter

./: README.md
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: package.json  tailwind.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ProtocolExplorer.tsx  WalletAnalyzer.tsx
