[project]
name = "erc8004-risk-underwriter-backend"
version = "1.0.0"
description = "ERC-8004 On-Chain AI Risk Underwriter — FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "mangum==0.19.0",
    "pydantic==2.10.4",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
